initial recipe for enrollment service

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -5,8 +5,11 @@ BBPATH .= ":${LAYERDIR}"
 BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
             ${LAYERDIR}/recipes-*/*/*.bbappend"
 
-BBFILE_COLLECTIONS += "ics_lm"
-BBFILE_PATTERN_ics_lm = "^${LAYERDIR}/"
-BBFILE_PRIORITY_ics_lm = "10"
+BBFILE_COLLECTIONS += "ics_dm"
+BBFILE_PATTERN_ics_dm = "^${LAYERDIR}/"
+BBFILE_PRIORITY_ics_dm = "10"
 
-LAYERSERIES_COMPAT_ics_lm = "dunfell"
+LAYERSERIES_COMPAT_ics_dm = "dunfell"
+
+#todo - enrollment must not be default for productive images
+CORE_IMAGE_EXTRA_INSTALL_append = " enrollment"
