--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -3,7 +3,9 @@ BBPATH .= ":${LAYERDIR}"
 
 # We have recipes-* directories, add to BBFILES
 BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
-            ${LAYERDIR}/recipes-*/*/*.bbappend"
+            ${LAYERDIR}/recipes-*/*/*.bbappend \
+            ${LAYERDIR}/recipes-*/*/*/*.bb \
+            ${LAYERDIR}/recipes-*/*/*/*.bbappend "
 
 BBFILE_COLLECTIONS += "ics_dm"
 BBFILE_PATTERN_ics_dm = "^${LAYERDIR}/"
