set meta-ics_dm preferred docker engine to docker-moby since meta-iotedge doesnt do it but documents this dependency

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -15,3 +15,5 @@ LAYERSERIES_COMPAT_ics_dm = "dunfell"
 
 #todo - enrollment must not be default for productive images
 CORE_IMAGE_EXTRA_INSTALL_append = " enrollment"
+
+PREFERRED_PROVIDER_virtual/docker ?= "docker-moby"
