- restructure meta-adu layer from ics-dm-os to meta-ics-dm - split do-client-lite to do-client and do-client-sdk caused by changes upstream - renamed azure-device-update to iot-hub-device-update - iot-hub-device-update will build upstream agent (with linker fixes   neccessary due to other azure-iot-sdk-c options) - added ics-dm-iot-device-update wich will build an   iot-hub-device-update service with our adaptions

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -13,6 +13,7 @@ BBFILE_PRIORITY_ics_dm = "10"
 
 LAYERSERIES_COMPAT_ics_dm = "dunfell"
 
+CORE_IMAGE_EXTRA_INSTALL_append = " ics-dm-iot-hub-device-update"
 #todo - enrollment must not be default for productive images
 CORE_IMAGE_EXTRA_INSTALL_append = " enrollment"
 
