--- a/recipes-azure-iot/do-client/do-client/do-client.service
+++ b/recipes-azure-iot/do-client/do-client/do-client.service
@@ -5,7 +5,8 @@ After=network-online.target
 [Service]
 Type=simple
 Restart=on-failure
-User=root
+User=do
+Group=do
 ExecStart=/usr/bin/deliveryoptimization-agent
 
 [Install]
