declare layer dependencies; don't auto install "enrollment" when using meta-ics-dm

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -11,10 +11,9 @@ BBFILE_COLLECTIONS += "ics_dm"
 BBFILE_PATTERN_ics_dm = "^${LAYERDIR}/"
 BBFILE_PRIORITY_ics_dm = "10"
 
+LAYERDEPENDS_ics_dm = "elbb meta-iotedge swupdate virtualization-layer"
 LAYERSERIES_COMPAT_ics_dm = "dunfell"
 
 CORE_IMAGE_EXTRA_INSTALL_append = " ics-dm-iot-hub-device-update"
-#todo - enrollment must not be default for productive images
-CORE_IMAGE_EXTRA_INSTALL_append = " enrollment"
 
 PREFERRED_PROVIDER_virtual/docker ?= "docker-moby"
