configure enrollment via DISTRO_FEATURE/PACKAGECONFIG \"ics-dm-demo\"

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -24,3 +24,5 @@ PACKAGECONFIG_append_pn-curl-native = " nghttp2"
 # we fix it by disabling cmake-native's download feature.
 DEPENDS_remove_pn-cmake-native = "curl-native"
 CMAKE_EXTRACONF_append_pn-cmake-native = " -DCMAKE_USE_SYSTEM_LIBRARY_CURL=0 -DCMAKE_USE_OPENSSL=OFF"
+
+CORE_IMAGE_EXTRA_INSTALL_append = "${@bb.utils.contains('DISTRO_FEATURES', 'ics-dm-demo', ' enrollment', '', d)}"
