added a todo for removing cmake-native adaptions needed to get cargo to download via http2

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -19,6 +19,10 @@ CORE_IMAGE_EXTRA_INSTALL_append = " iot-hub-device-update"
 PREFERRED_PROVIDER_virtual/docker ?= "docker-moby"
 
 # enable curl-native with nghttp2 support for cargo-native(rust)
+#
+# todo: remove that if rust-bindgen, rust-cbindgen, iot-identity-service are
+#       not using cargo directly to download "vendor" dependencies anymore,
+#       e.g. when we switch back to use meta-iotedge instead of own recipes
 PACKAGECONFIG_append_pn-curl-native = " nghttp2"
 # unfortunately the above line introduces a circular dependency error.
 # we fix it by disabling cmake-native's download feature.
