--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -30,10 +30,10 @@ CMAKE_EXTRACONF_append_pn-cmake-native = " -DCMAKE_USE_SYSTEM_LIBRARY_CURL=0 -DC
 # mandatory iot-hub-device-update
 CORE_IMAGE_EXTRA_INSTALL_append = " iot-hub-device-update"
 
-# conditional enrollment
+# optional enrollment
 CORE_IMAGE_EXTRA_INSTALL_append = "${@bb.utils.contains('DISTRO_FEATURES', 'ics-dm-demo', ' enrollment', '', d)}"
 
-# conditionally iotedge
+# optional iotedge
 CORE_IMAGE_EXTRA_INSTALL_append = "${@bb.utils.contains('DISTRO_FEATURES', 'iotedge', ' iotedge-daemon iotedge-cli kernel-modules', '', d)}"
 # If we install iotedge we have to add 'virtualization' to 'DISTRO_FEATURES'.
 # We can not do this via
@@ -42,4 +42,4 @@ CORE_IMAGE_EXTRA_INSTALL_append = "${@bb.utils.contains('DISTRO_FEATURES', 'iote
 # directly, since it is not available at layer.conf load time.
 # We delay using a special bbclass that simply calls
 # 'DISTRO_FEATURES_append = " virtualization"'.
-USER_CLASSES_append = " ${@bb.utils.contains('DISTRO_FEATURES', 'iotedge', 'append_virtualization', 'skip_meta_virt_sanity_check', d)}"
+USER_CLASSES_append = " ${@bb.utils.contains('DISTRO_FEATURES', 'iotedge', 'append_virtualization', '', d)}"
