- initial distro config for ics-dm-os - moved recipes depending on meta-virtualization into dynamic layer - fix in iot-hub-device-update to use it on devices where root A is not on /dev/mmcblk0 - patches/fixes to rename u-boot partition references in adu/swupdate from "rpipart" to "bootpart" - u-boot config with support for A/B updates for odroid-c2 - u-boot patch and env on mmc config for odroid-c2 - odroid kernel fragment for overlayfs (mandatory for our readonly rootfs) - odroid kernel fragment for recommended systemd settings - initial support for odroid-c2 device - added dynamic-layers for bsps adaptions - really disable syslog in busybox -> systemd now gets syslog messages - removed dependency to meta-elbb

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -2,44 +2,26 @@
 BBPATH .= ":${LAYERDIR}"
 
 # We have recipes-* directories, add to BBFILES
-BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
-            ${LAYERDIR}/recipes-*/*/*.bbappend \
-            ${LAYERDIR}/recipes-*/*/*/*.bb \
-            ${LAYERDIR}/recipes-*/*/*/*.bbappend "
+BBFILES += "\
+    ${LAYERDIR}/recipes-*/*/*.bb \
+    ${LAYERDIR}/recipes-*/*/*.bbappend \
+    ${LAYERDIR}/recipes-*/*/*/*.bb \
+    ${LAYERDIR}/recipes-*/*/*/*.bbappend \
+"
 
+BBFILES_DYNAMIC += "\
+    odroid-layer:${LAYERDIR}/dynamic-layers/odroid/recipes-*/*/*.bb \
+    odroid-layer:${LAYERDIR}/dynamic-layers/odroid/recipes-*/*/*.bbappend \
+    raspberrypi:${LAYERDIR}/dynamic-layers/raspberrypi/recipes-*/*/*.bb \
+    raspberrypi:${LAYERDIR}/dynamic-layers/raspberrypi/recipes-*/*/*.bbappend \
+    virtualization-layer:${LAYERDIR}/dynamic-layers/virtualization/recipes-*/*/*.bb \
+    virtualization-layer:${LAYERDIR}/dynamic-layers/virtualization/recipes-*/*/*.bbappend \
+    virtualization-layer:${LAYERDIR}/dynamic-layers/virtualization/recipes-*/*/*/*.bb \
+    virtualization-layer:${LAYERDIR}/dynamic-layers/virtualization/recipes-*/*/*/*.bbappend \
+"
 BBFILE_COLLECTIONS += "ics_dm"
 BBFILE_PATTERN_ics_dm = "^${LAYERDIR}/"
 BBFILE_PRIORITY_ics_dm = "10"
 
-LAYERDEPENDS_ics_dm = "elbb rust-layer swupdate virtualization-layer"
+LAYERDEPENDS_ics_dm = "rust-layer swupdate"
 LAYERSERIES_COMPAT_ics_dm = "dunfell"
-
-PREFERRED_PROVIDER_virtual/docker ?= "docker-moby"
-
-# enable curl-native with nghttp2 support for cargo-native(rust)
-#
-# todo: remove that if rust-bindgen, rust-cbindgen, iot-identity-service are
-#       not using cargo directly to download "vendor" dependencies anymore,
-#       e.g. when we switch back to use meta-iotedge instead of own recipes
-PACKAGECONFIG_append_pn-curl-native = " nghttp2"
-# unfortunately the above line introduces a circular dependency error.
-# we fix it by disabling cmake-native's download feature.
-DEPENDS_remove_pn-cmake-native = "curl-native"
-CMAKE_EXTRACONF_append_pn-cmake-native = " -DCMAKE_USE_SYSTEM_LIBRARY_CURL=0 -DCMAKE_USE_OPENSSL=OFF"
-
-# mandatory iot-hub-device-update
-CORE_IMAGE_EXTRA_INSTALL_append = " iot-hub-device-update"
-
-# optional enrollment
-CORE_IMAGE_EXTRA_INSTALL_append = "${@bb.utils.contains('DISTRO_FEATURES', 'ics-dm-demo', ' enrollment', '', d)}"
-
-# optional iotedge
-CORE_IMAGE_EXTRA_INSTALL_append = "${@bb.utils.contains('DISTRO_FEATURES', 'iotedge', ' iotedge-daemon iotedge-cli kernel-modules', '', d)}"
-# If we install iotedge we have to add 'virtualization' to 'DISTRO_FEATURES'.
-# We can not do this via
-# 'DISTRO_FEATURES_append = "${@bb.utils.contains('DISTRO_FEATURES', 'iotedge', ' virtualization', '', d)}"'.
-# We then get a recursion error. Also we can not access 'DISTRO_FEATURES'
-# directly, since it is not available at layer.conf load time.
-# We delay using a special bbclass that simply calls
-# 'DISTRO_FEATURES_append = " virtualization"'.
-USER_CLASSES_append = " ${@bb.utils.contains('DISTRO_FEATURES', 'iotedge', 'append_virtualization', '', d)}"
