set DISTRO_VERSION and SOFTWARE_VERSION

--- a/conf/distro/include/ics-dm-os-distro.conf
+++ b/conf/distro/include/ics-dm-os-distro.conf
@@ -1,7 +1,8 @@
 DISTRO = "ics-dm-os"
 DISTRO_NAME = "ICS-DM-OS"
 DISTROOVERRIDES = "poky:ics-dm-os"
-
+POKY_VERSION = "${DISTRO_VERSION}"
+DISTRO_VERSION = "${POKY_VERSION}.${ICS_DM_BUILD_NUMBER}"
 TARGET_VENDOR = "-icsdm"
 
 # Systemd
