--- a/conf/distro/include/ics-dm-os-swupdate.conf
+++ b/conf/distro/include/ics-dm-os-swupdate.conf
@@ -1,3 +1,2 @@
-# TODO ICS_DM_OS_VERSION
-SOFTWARE_VERSION = "${DISTRO_VERSION}.${ICS_DM_IOTEDGE_YOCTO_VERSION_BUILDSUFFIX}"
+SOFTWARE_VERSION = "${DISTRO_VERSION}"
 SOFTWARE_NAME = "${DISTRO_NAME_PREFIX}${DISTRO_NAME}${DISTRO_NAME_SUFFIX}"
