distro conf: fix DISTRO_VERSION appending

--- a/conf/distro/include/ics-dm-os-distro.conf
+++ b/conf/distro/include/ics-dm-os-distro.conf
@@ -2,7 +2,7 @@ DISTRO = "ics-dm-os"
 DISTRO_NAME = "ICS-DM-OS"
 DISTROOVERRIDES = "poky:ics-dm-os"
 POKY_VERSION = "${DISTRO_VERSION}"
-DISTRO_VERSION = "${POKY_VERSION}.${ICS_DM_BUILD_NUMBER}"
+DISTRO_VERSION_append = ".${ICS_DM_BUILD_NUMBER}"
 TARGET_VENDOR = "-icsdm"
 
 # Systemd
