reflect DISTRO_NAME_PREFIX and DISTO_NAME_SUFFIX in DISTRO_NAME

--- a/conf/distro/include/ics-dm-os-distro.conf
+++ b/conf/distro/include/ics-dm-os-distro.conf
@@ -1,7 +1,8 @@
 DISTRO = "ics-dm-os"
-DISTRO_NAME = "ICS-DM-OS"
+DISTRO_NAME = "${DISTRO_NAME_PREFIX}ICS-DM-OS${DISTRO_NAME_SUFFIX}"
 DISTROOVERRIDES = "poky:ics-dm-os"
-POKY_VERSION = "${DISTRO_VERSION}"
+# DISTRO_VERSION is POKY_VERSION (since we include poky conf before our own
+# distro settings) appended with a build number.
 DISTRO_VERSION_append = ".${ICS_DM_BUILD_NUMBER}"
 TARGET_VENDOR = "-icsdm"
 
