--- a/conf/distro/include/ics-dm-os-swupdate.conf
+++ b/conf/distro/include/ics-dm-os-swupdate.conf
@@ -1,2 +1,2 @@
 SOFTWARE_VERSION = "${DISTRO_VERSION}"
-SOFTWARE_NAME = "${DISTRO_NAME_PREFIX}${DISTRO_NAME}${DISTRO_NAME_SUFFIX}"
+SOFTWARE_NAME = "${DISTRO_NAME}"
