added initramfs; still todo: get uImage-initramfs into the image via wic

--- a/conf/distro/include/ics-dm-os-distro.conf
+++ b/conf/distro/include/ics-dm-os-distro.conf
@@ -31,6 +31,12 @@ IMAGE_ROOTFS_MAXSIZE = "524288"
 # we minimize the overhead factor (needed for fs) so we don't reach maxsize
 IMAGE_OVERHEAD_FACTOR = "1.05"
 
+# initramfs
+INITRAMFS_FSTYPES = "cpio.xz"
+INITRAMFS_IMAGE = "ics-dm-os-initramfs"
+INITRAMFS_IMAGE_NAME = "${DISTRO_NAME}_${DISTRO_VERSION}_${MACHINE}-initramfs.rootfs"
+INITRAMFS_IMAGE_BUNDLE = "1"
+
 # enable curl-native with nghttp2 support for cargo-native(rust)
 #
 # todo: remove that if iot-identity-service is
