enable uart for all rpi devices; don't install kernel to rootfs

--- a/conf/machine/raspberrypi4-64.extra.conf
+++ b/conf/machine/raspberrypi4-64.extra.conf
@@ -1,5 +1,7 @@
 require conf/machine/include/rpi.inc
 
+# Currently we set this for all rpi devices anyway, but for rpi4 it is
+# explicitly necessary.
 # https://github.com/agherzan/meta-raspberrypi/pull/733
 # Because we set "RPI_USE_U_BOOT = "1"" for all raspberrypi devices, we have to
 # enable uart for the raspberrypi4 to be able to boot at all.
