ics-dm-os-initramf mounts all overlays and bindmounts before start of systemd

--- a/conf/distro/include/ics-dm-os-distro.conf
+++ b/conf/distro/include/ics-dm-os-distro.conf
@@ -21,6 +21,8 @@ CONNECTIVITY_CHECK_URIS ?= "https://github.com/ICS-DeviceManagement "
 
 # Image configuration
 IMAGE_FSTYPES = "ext4.gz wic.xz wic.bmap"
+# rm kernel from boot partition, we use a bundled initramfs kernel in rootfs
+IMAGE_BOOT_FILES_remove = "uImage Image"
 
 # Disable busybox syslog
 SRC_URI_remove_pn-busybox = "file://syslog.cfg"
@@ -32,7 +34,7 @@ IMAGE_ROOTFS_MAXSIZE = "524288"
 IMAGE_OVERHEAD_FACTOR = "1.05"
 
 # initramfs
-INITRAMFS_FSTYPES = "cpio.xz"
+INITRAMFS_FSTYPES = "cpio.gz"
 INITRAMFS_IMAGE = "ics-dm-os-initramfs"
 INITRAMFS_IMAGE_NAME = "${DISTRO_NAME}_${DISTRO_VERSION}_${MACHINE}-initramfs.rootfs"
 INITRAMFS_IMAGE_BUNDLE = "1"
