- removed all systemd mount files - revisited systemd mount dependencies which are obsolete when using   initramfs - removed expand-data service - resize-data on first boot via initramfs if configured via   DISTRO_FEATURE 'resize-data' - write boot.scr dynamically

--- a/conf/distro/include/ics-dm-os-distro.conf
+++ b/conf/distro/include/ics-dm-os-distro.conf
@@ -23,6 +23,8 @@ CONNECTIVITY_CHECK_URIS ?= "https://github.com/ICS-DeviceManagement "
 IMAGE_FSTYPES = "ext4.gz wic.xz wic.bmap"
 # rm kernel from boot partition, we use a bundled initramfs kernel in rootfs
 IMAGE_BOOT_FILES_remove = "uImage Image"
+# instead of kernel we want the initramfs bundled kernel
+IMAGE_INSTALL_remove = "kernel"
 
 # Disable busybox syslog
 SRC_URI_remove_pn-busybox = "file://syslog.cfg"
