fix using wrong docker provider; switched back to moby

--- a/conf/distro/include/ics-dm-os-preferred.conf
+++ b/conf/distro/include/ics-dm-os-preferred.conf
@@ -1,3 +1,3 @@
 PREFERRED_PROVIDER_u-boot-default-script ?= "u-boot-scr"
 PREFERRED_PROVIDER_u-boot-fw-utils ?= "libubootenv"
-PREFERRED_PROVIDER_virtual/docker ?= "docker-moby"
+PREFERRED_PROVIDER_virtual/docker = "docker-moby"
