os-release.bbappend: adapt to meta-ics-dm layer handling in kas

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -25,3 +25,4 @@ BBFILE_PRIORITY_ics_dm = "10"
 
 LAYERDEPENDS_ics_dm = "rust-layer swupdate"
 LAYERSERIES_COMPAT_ics_dm = "dunfell"
+LAYERDIR_ics_dm = "${LAYERDIR}"
