--- a/kas/feature/ics-dm-os-common.yaml
+++ b/kas/feature/ics-dm-os-common.yaml
@@ -32,6 +32,6 @@ env:
   SWUPDATE_PASSWORD_FILE: "SWUPDATE_PASSWORD_FILE_NOT_SET"
 
 local_conf_header:
-  meta-ics-dm: |
+  meta-ics-dm_feature_ics-dm-os-common: |
     # For more options have a look into "poky/meta-poky/conf/local.conf.sample" resp.
     # "openebedded-core/meta/conf/local.conf.sample".
