distro: disable systemd-sysusers (uids/gids created by systemd-sysusers could potentially clash with uids/gids by later update images)

--- a/conf/distro/include/ics-dm-os-distro.conf
+++ b/conf/distro/include/ics-dm-os-distro.conf
@@ -8,6 +8,10 @@ TARGET_VENDOR = "-icsdm"
 
 # Systemd
 INIT_MANAGER ?= "systemd"
+# disable sysusers
+# Uids/gids created by systemd-sysusers could potentially clash with
+# uids/gids introduced by later update images.
+PACKAGECONFIG:remove:pn-systemd = "sysusers"
 
 # Persistent journald
 DISTRO_FEATURES_DEFAULT_append = " persistent-journal"
