--- a/conf/distro/include/ics-dm-os-distro.conf
+++ b/conf/distro/include/ics-dm-os-distro.conf
@@ -31,7 +31,7 @@ SRC_URI_remove_pn-busybox = "file://syslog.cfg"
 
 # limit max rootfs size
 IMAGE_ROOTFS_MAXSIZE = "524288"
-# overhead doesnt make much sense in a read-only-roots
+# overhead doesn't make much sense in a read-only-roots
 # we minimize the overhead factor (needed for fs) so we don't reach maxsize
 IMAGE_OVERHEAD_FACTOR = "1.1"
 
