--- a/recipes-ics-dm-demo/wifi-commissioning-gatt-service/wifi-commissioning-gatt-service/wifi-commissioning-gatt@.service
+++ b/recipes-ics-dm-demo/wifi-commissioning-gatt-service/wifi-commissioning-gatt-service/wifi-commissioning-gatt@.service
@@ -12,7 +12,7 @@ RestartSec=5
 User=nobody
 Group=wpa_supplicant
 
-ExecStart=/usr/bin/wifi-commissioning-gatt-service
+ExecStart=/bin/bash -c '/usr/bin/wifi-commissioning-gatt-service -i %i -d $(/usr/bin/ics_dm_get_deviceid.sh)'
 
 [Install]
 WantedBy=multi-user.target
