Update partition schema, PBI 12215

--- a/conf/distro/include/ics-dm-os-distro.conf
+++ b/conf/distro/include/ics-dm-os-distro.conf
@@ -33,8 +33,17 @@ IMAGE_INSTALL_remove = "kernel"
 # Disable busybox syslog
 SRC_URI_remove_pn-busybox = "file://syslog.cfg"
 
+# define partition (default) sizes in KiB
+#     Note, the last data partition will be expanded during the first boot after image flashing inside the INITRAMFS.
+#     This means, ICS_PART_SIZE_DATA is the initial value.
+ICS_PART_SIZE_BOOT ?= "131072"
+ICS_PART_SIZE_ROOTFS ?= "1048576"
+ICS_PART_SIZE_FACTORY ?= "131072"
+ICS_PART_SIZE_ETC ?= "131072"
+ICS_PART_SIZE_DATA ?= "524288"
+
 # limit max rootfs size
-IMAGE_ROOTFS_MAXSIZE = "524288"
+IMAGE_ROOTFS_MAXSIZE = "${ICS_PART_SIZE_ROOTFS}"
 # overhead doesn't make much sense in a read-only-roots
 # we minimize the overhead factor (needed for fs) so we don't reach maxsize
 IMAGE_OVERHEAD_FACTOR = "1.1"
