--- a/kas/feature/ics-dm-os-common.yaml
+++ b/kas/feature/ics-dm-os-common.yaml
@@ -31,7 +31,39 @@ env:
   SWUPDATE_PRIVATE_KEY: "SWUPDATE_PRIVATE_KEY_NOT_SET"
   SWUPDATE_PASSWORD_FILE: "SWUPDATE_PASSWORD_FILE_NOT_SET"
 
+  # ICS-DM development tools
+  ICS_DM_DEVEL_TOOLS: "\
+        valgrind \
+        ltrace \
+        strace \
+        gdbserver \
+        htop \
+        lsof \
+        curl \
+        tcpdump \
+        ethtool \
+        lshw \
+        sysstat \
+        ldd \
+        parted \
+        smartmontools \
+        mmc-utils \
+        sudo \
+        coreutils \
+        procps \
+      "
+
+  # lower alternative default priority
+  ICS_DM_PRIO_DEFAULT_COREUTILS: "30"
+  ICS_DM_PRIO_DEFAULT_PROCPS: "40"
+
+  # explicitly control utilities used
+  ICS_DM_PRIO_TOOL_COREUTILS: "100"
+  ICS_DM_PRIO_TOOL_PROCPS: "100"
+
 local_conf_header:
   meta-ics-dm_feature_ics-dm-os-common: |
     # For more options have a look into "poky/meta-poky/conf/local.conf.sample" resp.
     # "openebedded-core/meta/conf/local.conf.sample".
+
+    CORE_IMAGE_EXTRA_INSTALL += "${ICS_DM_DEVEL_TOOLS}"
