--- a/conf/distro/include/ics-dm-os-distro.conf
+++ b/conf/distro/include/ics-dm-os-distro.conf
@@ -64,3 +64,11 @@ PACKAGECONFIG_append_pn-curl-native = " nghttp2"
 # we fix it by disabling cmake-native's download feature.
 DEPENDS_remove_pn-cmake-native = "curl-native"
 CMAKE_EXTRACONF_append_pn-cmake-native = " -DCMAKE_USE_SYSTEM_LIBRARY_CURL=0 -DCMAKE_USE_OPENSSL=OFF"
+
+# lower alternative default priority
+ALTERNATIVE_PRIORITY_coreutils = "${ICS_DM_PRIO_DEFAULT_COREUTILS}"
+ALTERNATIVE_PRIORITY_procps = "${ICS_DM_PRIO_DEFAULT_PROCPS}"
+
+# explicitly control utilities used
+ALTERNATIVE_PRIORITY_coreutils[dd] = "${ICS_DM_PRIO_TOOL_COREUTILS}"
+ALTERNATIVE_PRIORITY_procps[ps] = "${ICS_DM_PRIO_TOOL_PROCPS}"
