Move alternative values for coreutils and procps from kas config to distro config

--- a/conf/distro/include/ics-dm-os-distro.conf
+++ b/conf/distro/include/ics-dm-os-distro.conf
@@ -64,9 +64,9 @@ DEPENDS_remove_pn-cmake-native = "curl-native"
 CMAKE_EXTRACONF_append_pn-cmake-native = " -DCMAKE_USE_SYSTEM_LIBRARY_CURL=0 -DCMAKE_USE_OPENSSL=OFF"
 
 # lower alternative default priority
-ALTERNATIVE_PRIORITY_coreutils = "${ICS_DM_PRIO_DEFAULT_COREUTILS}"
-ALTERNATIVE_PRIORITY_procps = "${ICS_DM_PRIO_DEFAULT_PROCPS}"
+ALTERNATIVE_PRIORITY_coreutils = "30"
+ALTERNATIVE_PRIORITY_procps = "40"
 
 # explicitly control utilities used
-ALTERNATIVE_PRIORITY_coreutils[dd] = "${ICS_DM_PRIO_TOOL_COREUTILS}"
-ALTERNATIVE_PRIORITY_procps[ps] = "${ICS_DM_PRIO_TOOL_PROCPS}"
+ALTERNATIVE_PRIORITY_coreutils[dd] = "100"
+ALTERNATIVE_PRIORITY_procps[ps] = "100"
