Add kas environment variable ICS_DM_USER_PASSWORD

--- a/kas/feature/ics-dm-os-common.yaml
+++ b/kas/feature/ics-dm-os-common.yaml
@@ -34,6 +34,9 @@ env:
   # ICS-DM development tools
   ICS_DM_DEVEL_TOOLS: ""
 
+  # (plain) password of ics-dm user
+  ICS_DM_USER_PASSWORD: ""
+
 local_conf_header:
   meta-ics-dm_feature_ics-dm-os-common: |
     # For more options have a look into "poky/meta-poky/conf/local.conf.sample" resp.
