Add certificate partition

--- a/conf/distro/include/ics-dm-os-distro.conf
+++ b/conf/distro/include/ics-dm-os-distro.conf
@@ -39,6 +39,7 @@ SRC_URI_remove_pn-busybox = "file://syslog.cfg"
 ICS_DM_PART_SIZE_BOOT ?= "40960"
 ICS_DM_PART_SIZE_ROOTFS ?= "760832"
 ICS_DM_PART_SIZE_FACTORY ?= "40960"
+ICS_DM_PART_SIZE_CERT ?= "40960"
 ICS_DM_PART_SIZE_ETC ?= "40960"
 ICS_DM_PART_SIZE_DATA ?= "524288"
 
