--- a/conf/distro/include/ics-dm-os-distro.conf
+++ b/conf/distro/include/ics-dm-os-distro.conf
@@ -37,11 +37,22 @@ SRC_URI_remove_pn-busybox = "file://syslog.cfg"
 #     Note, the last data partition will be expanded during the first boot after image flashing inside the INITRAMFS.
 #     This means, ICS_DM_PART_SIZE_DATA is the initial value.
 ICS_DM_PART_SIZE_BOOT ?= "40960"
+ICS_DM_PART_SIZE_UBOOT_ENV ?= "64"
 ICS_DM_PART_SIZE_ROOTFS ?= "760832"
 ICS_DM_PART_SIZE_FACTORY ?= "40960"
 ICS_DM_PART_SIZE_CERT ?= "40960"
 ICS_DM_PART_SIZE_ETC ?= "40960"
 ICS_DM_PART_SIZE_DATA ?= "524288"
+
+# location of u-boot environment areas in KiB
+#   - Fixed addresses are used (--offset in WKS file), suitable for u-boot configuration.
+#   - It has to be aligned with the boot partition (ICS_DM_PART_SIZE_BOOT) and the MBR/GPT.
+#   - The wic aborts the build, in the case the partitions cannot be located at the fixed location.
+#   - The partitions will be initialized with zeros (--source in WKS file). In this way, u-boot is able
+#     to create the default environment during the first boot after flashing the SD-Card image.
+#   - No entries inside the partition table will be created (--no-table in WKS file).
+ICS_DM_PART_OFFSET_UBOOT_ENV1 ?= "49152"
+ICS_DM_PART_OFFSET_UBOOT_ENV2 ?= "51200"
 
 # limit max rootfs size
 IMAGE_ROOTFS_MAXSIZE = "${ICS_DM_PART_SIZE_ROOTFS}"
