--- a/conf/distro/include/ics-dm-os-distro.conf
+++ b/conf/distro/include/ics-dm-os-distro.conf
@@ -47,12 +47,20 @@ ICS_DM_PART_SIZE_DATA ?= "524288"
 # location of u-boot environment areas in KiB
 #   - Fixed addresses are used (--offset in WKS file), suitable for u-boot configuration.
 #   - It has to be aligned with the boot partition (ICS_DM_PART_SIZE_BOOT) and the MBR/GPT.
-#   - The wic aborts the build, in the case the partitions cannot be located at the fixed location.
-#   - The partitions will be initialized with zeros (--source in WKS file). In this way, u-boot is able
+#   - Wic aborts the build, in the case the partitions cannot be located at the fixed location.
+#   - The partitions will be initialized with 0xff (--source in WKS file). In this way, u-boot is able
 #     to create the default environment during the first boot after flashing the SD-Card image.
 #   - No entries inside the partition table will be created (--no-table in WKS file).
-ICS_DM_PART_OFFSET_UBOOT_ENV1 ?= "49152"
-ICS_DM_PART_OFFSET_UBOOT_ENV2 ?= "51200"
+#   - The variable ICS_DM_PART_SPARE1 is used to define a gap behind the boot partition.
+#   - The variable ICS_DM_PART_SPARE2 is used to define a gap between both environment partitions.
+#     In this way, the environment partitions can be located in different erase blocks.
+ICS_DM_PART_SPARE1 = "8192"
+ICS_DM_PART_SPARE2 = "1984"
+ICS_DM_PART_OFFSET_UBOOT_ENV1 = "${@int(d.getVar('ICS_DM_PART_SIZE_BOOT')) + \
+                                    int(d.getVar('ICS_DM_PART_SPARE1'))}"
+ICS_DM_PART_OFFSET_UBOOT_ENV2 = "${@int(d.getVar('ICS_DM_PART_OFFSET_UBOOT_ENV1')) + \
+                                    int(d.getVar('ICS_DM_PART_SIZE_UBOOT_ENV')) + \
+                                    int(d.getVar('ICS_DM_PART_SPARE2'))}"
 
 # limit max rootfs size
 IMAGE_ROOTFS_MAXSIZE = "${ICS_DM_PART_SIZE_ROOTFS}"
