Move feature persistent_journal to persistent_var_log: basic step

--- a/conf/distro/include/ics-dm-os-user_classes.conf
+++ b/conf/distro/include/ics-dm-os-user_classes.conf
@@ -14,5 +14,5 @@ USER_CLASSES_append = " ${@bb.utils.contains('DISTRO_FEATURES', 'iotedge', 'appe
 # Optional tpm
 USER_CLASSES_append = " ${@bb.utils.contains('DISTRO_FEATURES', 'tpm', 'tpm-cfg', '', d)}"
 #
-# We need a nonvolatile log dir when DISTRO_FEATURE "persistent-journal" is set.
-USER_CLASSES_append = " ${@bb.utils.contains('DISTRO_FEATURES', 'persistent-journal', 'disable_volatile_log_dir', '', d)}"
+# We need a nonvolatile log dir when DISTRO_FEATURE "persistent-var-log" is set.
+USER_CLASSES_append = " ${@bb.utils.contains('DISTRO_FEATURES', 'persistent-var-log', 'disable_volatile_log_dir', '', d)}"
