--- a/conf/distro/include/ics-dm-os-distro.conf
+++ b/conf/distro/include/ics-dm-os-distro.conf
@@ -13,8 +13,8 @@ INIT_MANAGER ?= "systemd"
 # uids/gids introduced by later update images.
 PACKAGECONFIG:remove:pn-systemd = "sysusers"
 
-# Persistent journald
-DISTRO_FEATURES_DEFAULT_append = " persistent-journal"
+# Persistent log
+DISTRO_FEATURES_DEFAULT_append = " persistent-var-log"
 JOURNALD_SystemMaxUse ?= "128M"
 
 # Use opkg's ipk
