--- a/conf/distro/include/ics-dm-os-distro.conf
+++ b/conf/distro/include/ics-dm-os-distro.conf
@@ -85,3 +85,7 @@ ALTERNATIVE_PRIORITY_procps = "40"
 # explicitly control utilities used
 ALTERNATIVE_PRIORITY_coreutils[dd] = "100"
 ALTERNATIVE_PRIORITY_procps[ps] = "100"
+
+# update-ca-certificates is not working when we include the following patch
+# which poky applies
+SRC_URI:remove:pn-ca-certificates= "file://update-ca-certificates-support-Toybox.patch"
