--- a/kas/machine/rpi/rpi.yaml
+++ b/kas/machine/rpi/rpi.yaml
@@ -4,6 +4,6 @@ header:
   version: 10
 
 repos:
-  meta-raspberrypi:
+  ext/meta-raspberrypi:
     url: "https://github.com/agherzan/meta-raspberrypi.git"
     refspec: 934064a01903b2ba9a82be93b3f0efdb4543a0e8
