update modules enrollment, iot-module-template and ics-dm-iot-module-rs
- add ics-dm-iot-module to image
- patch aziot services to check additional file 00-super.toml

--- a/kas/feature/iot.yaml
+++ b/kas/feature/iot.yaml
@@ -5,4 +5,7 @@ header:
 
 local_conf_header:
   meta-ics-dm_feature_iot: |
-    CORE_IMAGE_EXTRA_INSTALL += "iot-module-template"
+    CORE_IMAGE_EXTRA_INSTALL += "\
+    iot-module-template \
+    ics-dm-iot-module-rs \
+    "
