support phytec polis: - u-boot, initramfs and kernel supports booting with our partition scheme - not working: wifi, bluetooth - not tested: ethernet

--- a/conf/distro/include/ics-dm-os-swupdate.conf
+++ b/conf/distro/include/ics-dm-os-swupdate.conf
@@ -1,2 +1,6 @@
 SOFTWARE_VERSION = "${DISTRO_VERSION}"
 SOFTWARE_NAME = "${DISTRO_NAME}"
+
+# for referencing the root device in swupdate sw-description
+# respectively iot-hub-device-update
+ROOT_DEV_P = "/dev/mmcblk0p"
