--- a/conf/distro/include/ics-dm-os-distro.conf
+++ b/conf/distro/include/ics-dm-os-distro.conf
@@ -42,6 +42,15 @@ ICS_DM_PART_SIZE_CERT ?= "40960"
 ICS_DM_PART_SIZE_ETC ?= "40960"
 ICS_DM_PART_SIZE_DATA ?= "524288"
 
+# enable variable expansion in wks includes
+WICVARS:append = " ICS_DM_PART_SIZE_BOOT"
+WICVARS:append = " ICS_DM_PART_SIZE_UBOOT_ENV"
+WICVARS:append = " ICS_DM_PART_SIZE_ROOTFS"
+WICVARS:append = " ICS_DM_PART_SIZE_FACTORY"
+WICVARS:append = " ICS_DM_PART_SIZE_CERT"
+WICVARS:append = " ICS_DM_PART_SIZE_ETC"
+WICVARS:append = " ICS_DM_PART_SIZE_DATA"
+
 # location of u-boot environment areas in KiB
 #   - Fixed addresses are used (--offset in WKS file), suitable for u-boot configuration.
 #   - It has to be aligned with the boot partition (ICS_DM_PART_SIZE_BOOT) and the MBR/GPT.
