--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -10,6 +10,10 @@ BBFILES += "\
 "
 
 BBFILES_DYNAMIC += "\
+    freescale-layer:${LAYERDIR}/dynamic-layers/freescale-layer/recipes-*/*/*.bb \
+    freescale-layer:${LAYERDIR}/dynamic-layers/freescale-layer/recipes-*/*/*.bbappend \
+    phytec:${LAYERDIR}/dynamic-layers/phytec/recipes-*/*/*.bb \
+    phytec:${LAYERDIR}/dynamic-layers/phytec/recipes-*/*/*.bbappend \
     raspberrypi:${LAYERDIR}/dynamic-layers/raspberrypi/recipes-*/*/*.bb \
     raspberrypi:${LAYERDIR}/dynamic-layers/raspberrypi/recipes-*/*/*.bbappend \
     virtualization-layer:${LAYERDIR}/dynamic-layers/virtualization/recipes-*/*/*.bb \
