- freescale layer: set IMX_DEFAULT_BSP = "nxp" to fix some   MACHINEOVERRIDES issues - wifi+bt: use latest laird lbw firmware - fixed ICS_DM_PART_OFFSET_UBOOT_ENV* values

--- a/conf/machine/phyboard-polis-imx8mm-4.extra.conf
+++ b/conf/machine/phyboard-polis-imx8mm-4.extra.conf
@@ -1,15 +1,37 @@
+###############################################################################
+# settings for meta-ics-dm
+###############################################################################
+
 # WIC config
 WKS_FILE = "ics-dm-os.phytec.wks.in"
-WKS_FILES:mx8m = "${WKS_FILE}"
+WKS_FILES:${MACHINE} = "${WKS_FILE}"
 # don't use class wic-helper from meta-phytec
 IMAGE_CLASSES:remove = " wic-helper"
 
-# kernel
-PREFERRED_PROVIDER:virtual/kernel ?= "linux-imx"
-KERNEL_BOOTCMD = "booti"
-KERNEL_DEVICETREE_FN = "imx8mm-phyboard-polis-rdk.dtb"
+# install kernel-devicetree to 'root' partition instead of 'boot'
 IMAGE_BOOT_FILES:remove:pn-ics-dm-os-image = " ${KERNEL_DEVICETREE_FN} oftree"
 IMAGE_INSTALL:append:pn-ics-dm-os-image = "kernel-devicetree"
+
+# u-boot boot.scr config
+KERNEL_BOOTCMD = "booti"
+KERNEL_DEVICETREE_FN = "imx8mm-phyboard-polis-rdk.dtb"
+UBOOT_ARCH = "arm64"
+UBOOT_FDT_ADDR = "fdt_addr"
+UBOOT_FDT_LOAD = "1"
+
+# redundant u-boot env
+# this is currently preset by meta-phytec, because we use u-boot-imx instead
+# of our patched u-boot here.
+ICS_DM_PART_OFFSET_UBOOT_ENV1 = "3840"
+ICS_DM_PART_OFFSET_UBOOT_ENV2 = "3968"
+ICS_DM_PART_SIZE_UBOOT_ENV = "64"
+
+###############################################################################
+# settings for meta-phytec / meta-freescale
+###############################################################################
+
+# mask fw_env.config configuration of meta-phytec, we generate that ourselves
+BBMASK += "/meta-phytec/recipes-bsp/u-boot/libubootenv_%.bbappend"
 
 # - to fix https://github.com/phytec/meta-phytec/issues/8 remove "python" and
 #   add "python3"
@@ -17,28 +39,13 @@ IMAGE_INSTALL:append:pn-ics-dm-os-image = "kernel-devicetree"
 DEPENDS:remove:pn-u-boot-imx = " python"
 DEPENDS:append:pn-u-boot-imx = " bc-native python3"
 
-# redundant u-boot env (this is currently preset by meta-phytec)
-ICS_DM_PART_OFFSET_UBOOT_ENV1 = "0x3c0000"
-ICS_DM_PART_OFFSET_UBOOT_ENV2 = "0x3e0000"
-ICS_DM_PART_SIZE_UBOOT_ENV = "4"
+# when IMX_DEFAULT_BSP is not set explicitly, it defaults to 'mainline'.
+# the meta-freescale layer then filters out 'mx8mm' from 'MACHINE_OVERRIDES'
+# which results in multiple recipes from meta-phytec failing.
+IMX_DEFAULT_BSP = "nxp"
 
-# u-boot config
-# - we restrict UBOOT_CONFIG to "sd" only, so imx-boot compiles
-#   meta-phytec sets it to "fspi sd"
-UBOOT_ARCH = "arm64"
-UBOOT_CONFIG = "sd"
-UBOOT_FDT_ADDR = "fdt_addr"
-UBOOT_FDT_LOAD = "1"
-UBOOT_SUFFIX:mx8m = "bin"
+# kernel
+PREFERRED_PROVIDER:virtual/kernel ?= "linux-imx"
 
-# fixes:
-# - we have to set that explicitly
-# @ToDo why is that not detected from mx8mm
-ATF_MACHINE_NAME:pn-imx-boot = "bl31-imx8mm.bin"
-ATF_MACHINE_NAME:pn-imx-boot-phytec = "bl31-imx8mm.bin"
-PLATFORM:pn-imx-atf = "imx8mm"
-SOC_TARGET:pn-imx-boot = "iMX8MM"
-SOC_TARGET:pn-imx-boot-phytec = "iMX8MM"
-# restrict IMXBOOT_TARGETS to imx-boot compiles
-# meta-phytec sets it to "flash_evk flash_evk_flexspi"
-IMXBOOT_TARGETS = "flash_evk"
+# enable wifi + bt
+MACHINE_FIRMWARE:append = "lwb-etsi-firmware"
