disto conf: - add 'resize-data' to DISTRO_FEATURES on all systems - only set ICS_DM_PART_OFFSET_UBOOT_ENV* in distro conf if not already set   by maching conf

--- a/conf/distro/include/ics-dm-os-distro.conf
+++ b/conf/distro/include/ics-dm-os-distro.conf
@@ -5,6 +5,8 @@ DISTROOVERRIDES = "poky:ics-dm-os"
 # distro settings) appended with a build number.
 DISTRO_VERSION_append = ".${ICS_DM_BUILD_NUMBER}"
 TARGET_VENDOR = "-icsdm"
+# resize data partition
+DISTRO_FEATURES_DEFAULT:append = " resize-data"
 
 # Systemd
 INIT_MANAGER ?= "systemd"
@@ -63,9 +65,9 @@ WICVARS:append = " ICS_DM_PART_SIZE_DATA"
 #     In this way, the environment partitions can be located in different erase blocks.
 ICS_DM_PART_SPARE1 = "8192"
 ICS_DM_PART_SPARE2 = "1984"
-ICS_DM_PART_OFFSET_UBOOT_ENV1 = "${@int(d.getVar('ICS_DM_PART_SIZE_BOOT')) + \
+ICS_DM_PART_OFFSET_UBOOT_ENV1 ?= "${@int(d.getVar('ICS_DM_PART_SIZE_BOOT')) + \
                                     int(d.getVar('ICS_DM_PART_SPARE1'))}"
-ICS_DM_PART_OFFSET_UBOOT_ENV2 = "${@int(d.getVar('ICS_DM_PART_OFFSET_UBOOT_ENV1')) + \
+ICS_DM_PART_OFFSET_UBOOT_ENV2 ?= "${@int(d.getVar('ICS_DM_PART_OFFSET_UBOOT_ENV1')) + \
                                     int(d.getVar('ICS_DM_PART_SIZE_UBOOT_ENV')) + \
                                     int(d.getVar('ICS_DM_PART_SPARE2'))}"
 
