fix layer priority: lower layer priority of meta-phytec (ensured when building with kas) so meta-ics-dm has higher priority

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -28,3 +28,7 @@ BBFILE_PRIORITY_ics_dm = "10"
 LAYERDEPENDS_ics_dm = "rust-layer swupdate"
 LAYERSERIES_COMPAT_ics_dm = "dunfell"
 LAYERDIR_ics_dm = "${LAYERDIR}"
+
+# orchestrate other layers (we ensure our layer is latest when building with kas)
+# if you don't use kas, you should ensure meta-ics-dm is behind meta-phytec in BBLAYERS.
+BBFILE_PRIORITY_phytec = "9"
