--- a/conf/machine/phyboard-polis-imx8mm-4.extra.conf
+++ b/conf/machine/phyboard-polis-imx8mm-4.extra.conf
@@ -20,7 +20,7 @@ UBOOT_FDT_ADDR = "fdt_addr"
 UBOOT_FDT_LOAD = "1"
 
 # redundant u-boot env
-# this is currently preset by meta-phytec, because we use u-boot-imx instead
+# This is currently preset by meta-phytec, because we use u-boot-imx instead
 # of our patched u-boot here.
 ICS_DM_PART_OFFSET_UBOOT_ENV1 = "3840"
 ICS_DM_PART_OFFSET_UBOOT_ENV2 = "3968"
