qa: hardcoded eth0 and wlan0 references are now configurable

--- a/conf/machine/phyboard-polis-imx8mm-4.extra.conf
+++ b/conf/machine/phyboard-polis-imx8mm-4.extra.conf
@@ -49,3 +49,9 @@ PREFERRED_PROVIDER:virtual/kernel ?= "linux-imx"
 
 # enable wifi + bt
 MACHINE_FIRMWARE:append = "lwb-etsi-firmware"
+
+# ethernet device name
+ICS_DM_ETH0 = "eth0"
+
+# wlan device name
+ICS_DM_WLAN0 = "wlan0"
