--- a/recipes-core/systemd/systemd/ics-dm-first-boot.service
+++ b/recipes-core/systemd/systemd/ics-dm-first-boot.service
@@ -4,7 +4,7 @@ ConditionFirstBoot=yes
 
 # CAUTION!!!
 # Do not add service order dependencies in this service file.
-# ics_dm_first_boot.sh implicitly start services and might be a deadlock of starting services could happend.
+# ics_dm_first_boot.sh implicitly starts services and might cause a deadlock while starting services.
 # We are working to find a solution for this limitation.
 
 [Service]
