swupdate: Don't start swupdate.service. We don't use it and it failed to start, which resulted in a degraded status of 'systemctl is-system-running'.

--- a/conf/distro/include/ics-dm-os-distro.conf
+++ b/conf/distro/include/ics-dm-os-distro.conf
@@ -100,3 +100,6 @@ ALTERNATIVE_PRIORITY_procps[ps] = "100"
 # update-ca-certificates is not working when we include the following patch
 # which poky applies
 SRC_URI:remove:pn-ca-certificates= "file://update-ca-certificates-support-Toybox.patch"
+
+# disable automatic start of swupdate.service
+SYSTEMD_SERVICE_swupdate:remove:pn-swupdate= "swupdate.service"
