--- a/conf/distro/include/ics-dm-os-distro.conf
+++ b/conf/distro/include/ics-dm-os-distro.conf
@@ -36,6 +36,7 @@ SRC_URI_remove_pn-busybox = "file://syslog.cfg"
 # define partition (default) sizes in KiB
 #     Note, the last data partition will be expanded during the first boot after image flashing inside the INITRAMFS.
 #     This means, ICS_DM_PART_SIZE_DATA is the initial value.
+#     Note, when using kas/feature/ics-dm-os-common.yaml the values configured there will override values here.
 ICS_DM_PART_SIZE_BOOT ?= "40960"
 ICS_DM_PART_SIZE_UBOOT_ENV ?= "64"
 ICS_DM_PART_SIZE_ROOTFS ?= "760832"
