--- a/kas/feature/ics-dm-os-common.yaml
+++ b/kas/feature/ics-dm-os-common.yaml
@@ -12,6 +12,15 @@ env:
   # build number which is reflected in DISTRO_VERSION
   ICS_DM_BUILD_NUMBER: "0"
 
+  # partition configuration
+  ICS_DM_PART_SIZE_BOOT: "40960"
+  ICS_DM_PART_SIZE_UBOOT_ENV: "64"
+  ICS_DM_PART_SIZE_ROOTFS: "760832"
+  ICS_DM_PART_SIZE_FACTORY: "40960"
+  ICS_DM_PART_SIZE_CERT: "40960"
+  ICS_DM_PART_SIZE_ETC: "40960"
+  ICS_DM_PART_SIZE_DATA: "524288"
+
   # yocto build vars
   DEPLOY_DIR: "${TOPDIR}/deploy"
   DL_DIR: "${TOPDIR}/download"
