- iot-hub-device-update: fixed start up (fixes changes from PR#52) - iot-identity-service: create link `/var/secrets` at buildtime and directory   '/mnt/data/var/secrets/' at runtime (fixes changes from PR#52) - os-release: added vars 'ICS_DM_DEVEL_TOOLS' and 'ICS_DM_DEVEL_TOOLS_DEFAULT' - ics-dm-first-boot: set 'RemainAfterExit=true' to enable testing via   'systemctl is-active ics-dm-first-boot'

--- a/recipes-core/systemd/systemd/ics-dm-first-boot.service
+++ b/recipes-core/systemd/systemd/ics-dm-first-boot.service
@@ -9,6 +9,7 @@ ConditionFirstBoot=yes
 [Service]
 Type=oneshot
 ExecStart=/usr/bin/ics_dm_first_boot.sh
+RemainAfterExit=true
 
 [Install]
 WantedBy=multi-user.target
