--- a/kas/feature/iot.yaml
+++ b/kas/feature/iot.yaml
@@ -7,5 +7,5 @@ local_conf_header:
   meta-ics-dm_feature_iot: |
     CORE_IMAGE_EXTRA_INSTALL += "\
     iot-module-template \
-    ics-dm-iot-module-rs \
+    iot-module-template-rs \
     "
