- removed DISTRO_FEATURE 'tpm'; we use poky's MACHINE_FEATURE 'tpm2' instead - enrollment: removed PACKAGECONFIG 'tpm' switch; set REQUIRED_MACHINE_FEATURES="tpm2"

--- a/kas/feature/tpm.yaml
+++ b/kas/feature/tpm.yaml
@@ -5,4 +5,4 @@ header:
 
 local_conf_header:
   meta-ics-dm_feature_tpm: |
-    DISTRO_FEATURES_append = " tpm"
+    MACHINE_FEATURES:append = " tpm2"
