--- a/kas/feature/initramfs-flash-mode.yaml
+++ b/kas/feature/initramfs-flash-mode.yaml
@@ -5,4 +5,4 @@ header:
 
 local_conf_header:
   meta-ics-dm_feature_initramfs-flash-mode: |
-    DISTRO_FEATURES_append = " initramfs-flash-mode"
+    DISTRO_FEATURES:append = " initramfs-flash-mode"
