--- a/kas/example/iot-module-template-rs.yaml
+++ b/kas/example/iot-module-template-rs.yaml
@@ -1,11 +1,10 @@
 # kas config file
 
 header:
-  version: 10
+  version: 11
 
 local_conf_header:
-  meta-ics-dm_feature_iot: |
+  meta-ics-dm_example_iot_module-template-rs: |
     CORE_IMAGE_EXTRA_INSTALL += "\
-    iot-module-template \
     iot-module-template-rs \
     "
