--- a/conf/distro/include/ics-dm-os-user_classes.conf
+++ b/conf/distro/include/ics-dm-os-user_classes.conf
@@ -4,7 +4,7 @@
 USER_CLASSES += "image-mklibs"
 USER_CLASSES += "image-prelink"
 
-# The following USER_CLASSES_append calls delay setting certain features
+# The following USER_CLASSES:append calls delay setting certain features
 # depending on DISTRO_FEATURES/MACHINE_FEATURES. At load time of config files
 # the content of DISTRO_FEATURES resp. MACHINE_FEATURES are empty.
 #
