'wifi-commissioning-gatt-service':   - version bump to 0.2.0   - switch systemd service type to 'notify'

--- a/recipes-ics-dm/wifi-commissioning-gatt-service/wifi-commissioning-gatt-service/wifi-commissioning-gatt@.service
+++ b/recipes-ics-dm/wifi-commissioning-gatt-service/wifi-commissioning-gatt-service/wifi-commissioning-gatt@.service
@@ -3,9 +3,8 @@ Description=wifi-commissioning-gatt: commissioning wifi via bt
 Requires=wpa_supplicant@%i.service bluetooth.service
 After=wpa_supplicant@%i.service bluetooth.service bluetooth.target
 
-
 [Service]
-Type=simple
+Type=notify
 Restart=on-failure
 RestartSec=5
 
